--- a/src/Samples/SubModelOpt/SubModelOpt.csproj
+++ b/src/Samples/SubModelOpt/SubModelOpt.csproj
@@ -1,11 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWpf>true</UseWpf>
     <OutputType>Exe</OutputType>
     <DisableWinExeOutputInference>true</DisableWinExeOutputInference>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="6.0.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SubModelOpt.Core\SubModelOpt.Core.fsproj" />
